[project]
name = "zendriver-docker-example"
version = "0.1.0"
description = "Example project for using Zendriver with Docker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "zendriver",
    "requests",
    "apscheduler",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "ruff>=0.11.7",
]
